tests/parse/ui/simple_forall.stderr
error: failed to parse forall bounded variable list
 --> $DIR/simple_forall.rs:9:19
  |
9 | #[requires="forall x: 32, y: usize :: {} x > 0 ==> x > -1"]
  |                   ^^^^^^^^^^^^^^^^

error: failed to parse forall expression
  --> $DIR/simple_forall.rs:12:12
   |
12 | #[requires="forall"]
   |            ^^^^^^^^

error: forall can have only one implication
  --> $DIR/simple_forall.rs:15:12
   |
15 |   #[requires="forall x: i32, y: usize :: {x + 2, x + 3; x + 4} x > 0 ==> x + 2 > 2
   |  ____________^
16 | |     ==> true"]
   | |_____________^

thread 'rustc' panicked at 'not yet implemented', src/typeck.rs:57:21
note: Run with `RUST_BACKTRACE=1` for a backtrace.
thread 'main' panicked at 'rustc_thread failed: Any', libcore/result.rs:916:5
